--- a/Pages/membership.cshtml
+++ b/Pages/membership.cshtml
@@ -14,10 +14,15 @@
                 <li>You have completed a university degree or college diploma in a related field and</li>
                 <li>You have been employed for at least one year in a professional capacity in social services, education, industry, or other related fields which involves the application of behaviour analytic principles and is approved by the membership committee.</li>
             </ol>
-            <p>For proof of 1. a scan of your diploma is necessary, for proof of 2. a scan of an official document (e.g. certificate of employment) should be provided. Please send the scans to <a href="mailto:secretary@europenaba.org">secretary@europenaba.org.</a> The board of EABA will have the final decision on the approval of the full, voting membership.</p>
-            <p>Those interested in joining who do not meet these requirements may apply for student or affiliate non-voting membership status and still enjoy the benefits of being a member of EABA. An affiliate/student member is typically an individual who is interested in the discipline of behaviour analysis but who lacks formal training or who is pursuing formal training on a full time basis in the discipline of behaviour analysis.</p>
-            <p>If you are a member of an affiliated chapter of EABA, you are eligible to an Affiliated Chapters Membership, either full (voting) or student (non-voting).</p>
-            <b>If you stand up to these requirements, Join our team by <a href="/Identity/Account/Register">Registering here</a></b>
+            <div class="row">
+                <div class="col-md-8">
+                    <p>For proof of 1. a scan of your diploma is necessary, for proof of 2. a scan of an official document (e.g. certificate of employment) should be provided. Please send the scans to <a href="mailto:secretary@europenaba.org">secretary@europenaba.org.</a> The board of EABA will have the final decision on the approval of the full, voting membership.</p>
+                    <p>Those interested in joining who do not meet these requirements may apply for student or affiliate non-voting membership status and still enjoy the benefits of being a member of EABA. An affiliate/student member is typically an individual who is interested in the discipline of behaviour analysis but who lacks formal training or who is pursuing formal training on a full time basis in the discipline of behaviour analysis.</p>
+                    <p>If you are a member of an affiliated chapter of EABA, you are eligible to an Affiliated Chapters Membership, either full (voting) or student (non-voting).</p>
+                    <b>If you stand up to these requirements, Join our team by <a href="/Identity/Account/Register">Registering here</a></b>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
         </div>
     </div>
 </body>
