--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
@@ -26,9 +26,15 @@
             </div>
             <div class="col-md-9">
                 <div class="cont">
-                    <div>
-                        <h2>Boardmembers</h2>
+                    <div class="container">
+                        <div>
+                            <h1>Create Event</h1>
+                        </div>
+                        <p>
+                            <a asp-page="Create">Create New Boardmember</a>
+                        </p>
                     </div>
+                </div>
                     <div class="cart container">
                         <table class="table">
                             <thead>
