--- a/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
@@ -13,7 +13,8 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="list-group">
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Manage/Index">Profile</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/ChangePassword">Password</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
