--- a/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
@@ -11,14 +11,15 @@
         <hr />
         <div class="row">
             <div class="col-md-3">
-                <div class="list-group">                   
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action"href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/admin_edit_pdf">Elections</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
                 </div>
             </div>
             <div class="col-md-9">
@@ -34,7 +35,7 @@
                  <div class="form-group">
                     <input type="file" name="files-info" multiple />
                 </div>
-            <button type="submit" class="btn btn-default">Upload Files</button>
+            <button type="submit" class="btn btn-primary">Upload Files</button>
                 </form>
                 
             </div>
