--- a/Pages/Boardmembers/Create.cshtml
+++ b/Pages/Boardmembers/Create.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BoardMember.BoardRole" class="control-label"></label>
-                <input asp-for="BoardMember.BoardRole" class="form-control" />
+                <textarea asp-for="BoardMember.BoardRole" class="form-control" />
                 <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
             </div>
             <div class="form-group">
