--- a/Pages/committee.cshtml
+++ b/Pages/committee.cshtml
@@ -4,18 +4,20 @@
     ViewData["Title"] = "committee";
 }
 <body>
-    <div class="container">
-        <div class="text-justify">
-            <h3>The Committee will serve for two years, between the EABA conferences.</h3>
-            <ol>
-                <li><b>President: </b>with overall responsibility for the development of EABA, calling meetings, organising working parties to deal with specific issues, organising a committee to hold bi-annual conferences, and organising EABA committee elections. At the end of his/her term, the President remains for one extra year as Past President to ensure continuity.</li>
-                <li><b>Past president: </b>the previous President who remains for one or two extra years to ensure continuity.</li>
-                <li><b>Treasurer: </b>with responsibility for managing the EABA account, collection of membership fees and conference registration, and to liaise with other organisations and providers with regard to any financial matters.</li>
-                <li><b>Secretary: </b>with responsibility for maintaining the membership list, organising and maintaining the EABA web site, informing EJoBA of members’ addresses, and minuting EABA committee meetings.</li>
-                <li><b>Basic Science Representative: </b>with responsibility for maintaining and forwarding the basic science objectives of the organisation through links with other academic institutions.</li>
-                <li><b>Applied Science Representative: </b> with responsibility for maintaining and forwarding the applied science objectives of the organisation and liaising with accreditation boards, etc.</li>
-            </ol>
-        </div>
+    <div class="container heading">
+            <div class="card">
+                <h5 class="card-header">The Committee will serve for two years, between the EABA conferences</h5>
+                <div class="card-body">
+                    <ol>
+                        <li><b>President: </b>with overall responsibility for the development of EABA, calling meetings, organising working parties to deal with specific issues, organising a committee to hold bi-annual conferences, and organising EABA committee elections. At the end of his/her term, the President remains for one extra year as Past President to ensure continuity.</li>
+                        <li><b>Past president: </b>the previous President who remains for one or two extra years to ensure continuity.</li>
+                        <li><b>Treasurer: </b>with responsibility for managing the EABA account, collection of membership fees and conference registration, and to liaise with other organisations and providers with regard to any financial matters.</li>
+                        <li><b>Secretary: </b>with responsibility for maintaining the membership list, organising and maintaining the EABA web site, informing EJoBA of members’ addresses, and minuting EABA committee meetings.</li>
+                        <li><b>Basic Science Representative: </b>with responsibility for maintaining and forwarding the basic science objectives of the organisation through links with other academic institutions.</li>
+                        <li><b>Applied Science Representative: </b> with responsibility for maintaining and forwarding the applied science objectives of the organisation and liaising with accreditation boards, etc.</li>
+                    </ol>
+                </div>
+            </div>
     </div>
 </body>
 
