--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
@@ -22,17 +22,16 @@
                 <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                 <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
                 <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
+                <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
             </div>
             <div class="col-md-9">
                 <div class="cont">
-                    <div class="container">
                         <div>
                             <h2>Create Boardmember</h2>
                         </div>
                         <p>
                             <a asp-page="Create">Create New Boardmember</a>
                         </p>
-                    </div>
                 </div>
                     <div class="cart container">
                         <table class="table">
