--- a/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
@@ -21,6 +21,7 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
                 </div>
             </div>
             <div class="col-md-9">
@@ -52,6 +53,7 @@
                             </div>
                             <button type="submit" class="btn btn-primary">Update password</button>
                         </form>
+                        @Model.StatusMessage
                     </div>
                 </div>
             </div>
