--- a/Areas/Identity/Pages/Account/Admin/FAQS/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/FAQS/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model webApi.Pages.Boardmember.DeleteModel
+@model webApi.Areas.Identity.Pages.Account.Admin.FAQS.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -16,49 +16,40 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Index">Profile</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
+                    <a class="list-group-item list-group-item-action " href="/Identity/Account/Admin/Events/Index">Edit Events</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/FAQS">FAQS</a>
                 </div>
             </div>
-            <div class="col-md-9">
-                <div class="cont">
-                    <div>
-                        <h2>Delete Boardmember</h2>
-                    </div>
-
+            <div class="col-md-9">                
+                <h3>Are you sure you want to delete this ?</h3>
+                <div>
+                    <hr />
                     <dl class="dl-horizontal">
                         <dt>
-                            @Html.DisplayNameFor(model => model.BoardMember.Name)
+                            @Html.DisplayNameFor(model => model.FAQ.questions)
                         </dt>
                         <dd>
-                            @Html.DisplayFor(model => model.BoardMember.Name)
+                            @Html.DisplayFor(model => model.FAQ.questions)
                         </dd>
                         <dt>
-                            @Html.DisplayNameFor(model => model.BoardMember.BoardRole)
+                            @Html.DisplayNameFor(model => model.FAQ.answers)
                         </dt>
                         <dd>
-                            @Html.DisplayFor(model => model.BoardMember.BoardRole)
-                        </dd>
-                        <dt>
-                            @Html.DisplayNameFor(model => model.BoardMember.Image)
-                        </dt>
-                        <dd>
-                            @Html.DisplayFor(model => model.BoardMember.Image)
+                            @Html.DisplayFor(model => model.FAQ.answers)
                         </dd>
                     </dl>
 
                     <form method="post">
-                        <input type="hidden" asp-for="BoardMember.Id" />
+                        <input type="hidden" asp-for="FAQ.Id" />
                         <input type="submit" value="Delete" class="btn btn-primary" /> |
-                        <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                        <a asp-page="./Index">Back to List</a>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
