--- a/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
@@ -21,6 +21,7 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
                 </div>
             </div>
             <div class="col-md-9">
