--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -89,6 +89,13 @@
                             </a>
                         </div>
                     </li>
+                    <li class="nav-item active">
+                        <div class="dropdown">
+                            <a class="btn btn-secondary" asp-page="/FAQ" role="button" id="dropdownMenuLink">
+                                FAQ
+                            </a>
+                        </div>
+                    </li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
