--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -100,7 +100,7 @@
                             <div class="card" style="width: 18rem;">
                                 <div class="card-body">
                                     <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
-                                    <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
+                                    <!--<p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>-->
                                     <p class="card-text">Starts: @Html.DisplayFor(modelItem => item.StartDate)</p>
                                     <p class="card-text">Ends: @Html.DisplayFor(modelItem => item.date)</p>
                                 </div>
@@ -116,7 +116,7 @@
                                 <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
-                                    <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
+                                    <!--<p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>-->
                                     <p class="card-text">Starts: @Html.DisplayFor(modelItem => item.StartDate)</p>
                                     <p class="card-text">Ends: @Html.DisplayFor(modelItem => item.date)</p>
                                 </div>
