--- a/Pages/committee.cshtml
+++ b/Pages/committee.cshtml
@@ -37,8 +37,8 @@
                 {
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                            <p class="card-text">@Html.DisplayFor(modelItem => item.BoardRole)</p>
+                            <h5 class="card-title pads">@Html.DisplayFor(modelItem => item.Name)</h5>
+                            <p class="card-text pads">@Html.DisplayFor(modelItem => item.BoardRole)</p>
                             <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
                         </div>
                     </div>
@@ -48,8 +48,8 @@
                     <div class="card mb-3">
 
                         <div class="card-body">
-                            <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                            <p class="card-text">@Html.DisplayFor(modelItem => item.BoardRole)</p>
+                            <h5 class="card-title pads">@Html.DisplayFor(modelItem => item.Name)</h5>
+                            <p class="card-text pads">@Html.DisplayFor(modelItem => item.BoardRole)</p>
                             <p class="card-text">
                                 <img class="images card-image-top" style="float: left; padding: 10px;" src="~/images/boardmembers/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
                                 @Html.DisplayFor(modelItem => item.text)
