Smá breitingar á forrsíðu

--- a/Pages/committee.cshtml
+++ b/Pages/committee.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "committee";
 }
-<div class="container heading">
+<div class="container" style="margin-top: 60px;">
     <div class="card">
         <h5 class="card-header text-center">The Committee will serve for two years, between the EABA conferences</h5>
         <div class="card-body">
