--- a/Pages/EABA_history.cshtml
+++ b/Pages/EABA_history.cshtml
@@ -3,11 +3,12 @@
 @{
     ViewData["Title"] = "EABA_history";
 }
-<body>
-    <div class="container">
-        <div class="text-justify">
-            <h3>EABA history</h3>
+
+<div class="container">
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">EABA history</h3>
+        <div class="card-body">
             <p>Under <a href="https://www.tiki-toki.com/timeline/entry/947665/EABA-History/#vars!date=2017-11-11_15:26:25!">this link</a> you'll find a timeline of the history of the European Association for Behaviour Analysis (EABA), from its beginnings in the late 1990ies to presence. Enjoy the nostalgic look back. Feel free to send any suggestions for revisions to <a href="mailto:secretary@europenaba.org">secretary@europenaba.org.</a></p>
         </div>
     </div>
-</body>
+</div>
