--- a/Pages/Shared/_footer.cshtml
+++ b/Pages/Shared/_footer.cshtml
@@ -1,4 +1,4 @@
-﻿<section id="footer">
+﻿<section id="footer" style="margin-top: 60px;">
     <div class="container">
         <div class="row align-self-center">
             <div class="col-xs-12 col-sm-4 col-md-4">
