--- a/Pages/constitution.cshtml
+++ b/Pages/constitution.cshtml
@@ -4,10 +4,14 @@
     ViewData["Title"] = "constitution";
 }
 
-<body>
-    <div class="container">
-        <div class="text-justify">
-            <h3>Objectives</h3>
+
+
+<div class="container">
+
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Objectives</h3>
+        <div class="card-body">
             <ol>
                 <li>To provide an international forum within Europe for the study and discussion of matters relevant to behaviour analysis.</li>
                 <li>To encourage high quality education and professional certification throughout Europe.</li>
@@ -16,8 +20,14 @@
                 <li>To publish and disseminate the European Journal of Behaviour Analysis.</li>
                 <li>Maintain web pages/bulletin boards to facilitate communication.</li>
             </ol>
-            <h3>Membership</h3>
-            <p>Individual members in agreemeent with the objectives of EABA (as set out above) and who pay the specified annual fee, may join EABA. Our membership types are listed below:</p>
+        </div>
+    </div>
+
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Membership</h3>
+        <div class="card-body">
+            <p class="card-text">Individual members in agreemeent with the objectives of EABA (as set out above) and who pay the specified annual fee, may join EABA. Our membership types are listed below:</p>
             <ol>
                 <li>Full member</li>
                 <li>Affiliate/student member</li>
@@ -26,28 +36,59 @@
                 <li>Affiliated Chapters Membership / full</li>
                 <li>Affiliated Chapters Membership / student</li>
             </ol>
-            <h3>EABA Committee</h3>
-                <p>The governing body of EABA consists of a Board of Directors ('the Committee'). The Committee is currently comprised of a President, Treasurer, Secretary, and Basic and Applied Science representatives, and will eventually include the positions of President Elect and Past President such that such one individual (President Elect-President-Past President) will be on the committee for a period of 3 years to ensure continuity.</p>
-            <h3>Responsibilities of the EABA Committee</h3>
-                <p>The President presides at, and arranges meetings of, the Committee and Annual General Meetings of EABA. The Secretary is responsible for the administration of the Association and for ensuring that the minutes of all meetings are collected and distributed to the Committee (and any other members as appropriate). The Treasurer is responsible for the financial status of the Association.</p>
-            <h3>Annual General Meetings</h3>
-                <p>The Annual General Meeting (AGM) of EABA is held every year, or at such time and place as determined by the Committee. All members are welcome to attend.</p>
-            <h3>Voting</h3>
-            <p>All full members of EABA have voting rights. Voting is organised by the Secretary and is conducted either by show of hands (for a public meeting) or electronically (via this website).</p>
-            <h3>Finances</h3>
-                <p>Annually a budget is presented by the Treasurer to be approved by the Committee at the AGM. Each member (or member association) pays EABA an annual fee determined by the Committee.</p>
-                <p>If you want to learn more about the regulation of EABA you can <a href="./assets/EABA-By-Laws.pdf" target="_blank">download the bylaws.</a></p>
-            <h3>Affiliated Chapters</h3>
-                <p>There are currently seven affiliated chapters of EABA:</p>
-                <ul>
-                    <li><a href="http://www.atferd.no/">Norwegian Association for Behavior Analysis</a></li>
-                    <li><a href="http://www.dgva.org/">ABA Deutschland</a></li>
-                    <li>FinnABA (Association for Behavior Analysis / Finnland)</li>
-                    <li><a href="https://www.aarba.eu/en/aarba-home/">Association for Advancement of Radical Behavior Analysis – A.A.R.B.A, Italy</a></li>
-                    <li><a href="http://www.iescum.org/doceboCms/">European Institute for the Study of Human Behavior IESCUM, Italy</a></li>
-                    <li><a href="http://www.aiamc.it/">Associazione Italiana di Analisi e Modificazione del Comportamento AIAMC, Italy</a></li>
-                    <li><a href="https://www.behaviorism.panteion.gr/index.php/en/">The Hellenic Community for Behavior Analysis (Hellenic ABA)</a></li>
-                </ul>
         </div>
     </div>
-</body>
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">EABA Committee</h3>
+        <div class="card-body">
+            <p class="card-text">The governing body of EABA consists of a Board of Directors ('the Committee'). The Committee is currently comprised of a President, Treasurer, Secretary, and Basic and Applied Science representatives, and will eventually include the positions of President Elect and Past President such that such one individual (President Elect-President-Past President) will be on the committee for a period of 3 years to ensure continuity.</p>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Responsibilities of the EABA Committee</h3>
+        <div class="card-body">
+            <p class="card-text">The President presides at, and arranges meetings of, the Committee and Annual General Meetings of EABA. The Secretary is responsible for the administration of the Association and for ensuring that the minutes of all meetings are collected and distributed to the Committee (and any other members as appropriate). The Treasurer is responsible for the financial status of the Association.</p>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Annual General Meetings</h3>
+        <div class="card-body">
+            <p class="card-text">The Annual General Meeting (AGM) of EABA is held every year, or at such time and place as determined by the Committee. All members are welcome to attend.</p>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Voting</h3>
+        <div class="card-body">
+            <p class="card-text">All full members of EABA have voting rights. Voting is organised by the Secretary and is conducted either by show of hands (for a public meeting) or electronically (via this website).</p>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Finances</h3>
+        <div class="card-body">
+            <p class="card-text">Annually a budget is presented by the Treasurer to be approved by the Committee at the AGM. Each member (or member association) pays EABA an annual fee determined by the Committee.</p>
+            <p class="card-text">If you want to learn more about the regulation of EABA you can <a href="./assets/EABA-By-Laws.pdf" target="_blank">download the bylaws.</a></p>
+        </div>
+    </div>
+
+    <div class="card" style="margin-top: 60px;">
+        <h3 class="card-header text-center">Affiliated Chapters</h3>
+        <div class="card-body">
+            <p class="card-text">There are currently seven affiliated chapters of EABA:</p>
+            <ul>
+                <li><a href="http://www.atferd.no/">Norwegian Association for Behavior Analysis</a></li>
+                <li><a href="http://www.dgva.org/">ABA Deutschland</a></li>
+                <li>FinnABA (Association for Behavior Analysis / Finnland)</li>
+                <li><a href="https://www.aarba.eu/en/aarba-home/">Association for Advancement of Radical Behavior Analysis – A.A.R.B.A, Italy</a></li>
+                <li><a href="http://www.iescum.org/doceboCms/">European Institute for the Study of Human Behavior IESCUM, Italy</a></li>
+                <li><a href="http://www.aiamc.it/">Associazione Italiana di Analisi e Modificazione del Comportamento AIAMC, Italy</a></li>
+                <li><a href="https://www.behaviorism.panteion.gr/index.php/en/">The Hellenic Community for Behavior Analysis (Hellenic ABA)</a></li>
+            </ul>
+        </div>
+    </div>
+
+</div>
