--- a/Pages/presidents_opinion.cshtml
+++ b/Pages/presidents_opinion.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container" style="margin-top: 60px; margin-bottom: 60px;">
     <div class="card">
-        <h2 class="card-header text-center">president's opinion statement</h2>
+        <h2 class="card-header text-center">President's opinion statement</h2>
         <div>
             
             <div style="padding:20px">
