--- a/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="container" id="containerLayout">
 
-    <h2>Manage your Admin account</h2>
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
