--- a/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ChangePassword.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
-<div class="container" id="containerLayout">
+<div class="container card" id="containerLayout" style="padding:20px;">
 
-    <h2>Manage your Admin account</h2>
+    <h2 class="heading">Manage your Admin account</h2>
     <div>
         <hr />
         <div class="row">
@@ -24,16 +24,12 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/FAQS">FAQS</a>
                 </div>
             </div>
-            <div class="col-md-9">
-                <div class="cont">
-                    <div class="container">
+            <div class="col-md-9 center">
+                <div class="row justify-content-center">
+                    <div class="col-md-6">
                         <div>
                             <h2>Change your password</h2>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
                         <form id="change-password-form" method="post">
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="form-group">
